--- a/Amaliyot/amaliyot.html
+++ b/Amaliyot/amaliyot.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> MyFirst Javaspript</title>
+    <title>Amaliyot
+
+    </title>
 </head>
 <body>
-    <h1>Hello,This is MyFirst project</h1>
-    <script href="idex.js"></script>
+    <h1>Amaliyot</h1>
+    <script href="amaliyot.js"></script>
 </body>
 </html>
