--- a/Amaliyot/amaliyot.html
+++ b/Amaliyot/amaliyot.html
@@ -8,7 +8,7 @@
     </title>
 </head>
 <body>
-    <h1>Amaliyot</h1>
-    <script href="amaliyot.js"></script>
+    <h1>Amaliyot<h1>
+    <script src="./amaliyot.js"></script>
 </body>
 </html>
